	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkhead.c,
	* sdas/linksrc/lkihx.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklibr.h,
	* sdas/linksrc/lkmem.c,
	* sdas/linksrc/lkrel.c,
	* sdas/linksrc/lks19.c,
	* sdas/linksrc/lksym.c,
	* sdas/linksrc/sdld.c: cosmetic changes
	* sdas/linksrc/lklist.c,
	* sdas/linksrc/lknoice.c: synced with ASxxxx 5

2011-04-20 Borut Razem <borut.razem AT gmail.com>

	* debugger/mcs51/simi.c: fixed compiletion on Solaris

2011-04-20 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.dsp: added lksdcdb.c
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lknoice.c(NoICEfopen),
	* sdas/linksrc/lkmain.c(main): factored out NoICEfopen

2011-04-18 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/Makefile.in,
	* sdas/linksrc/lksdcdb.c: new, added,
	* sdas/linksrc/aslink.h,
	* sdas/linksrc/lkdata.c,
	* sdas/linksrc/lkeval.c,
	* sdas/linksrc/lklex.c,
	* sdas/linksrc/lklibr.c,
	* sdas/linksrc/lklist.c,
	* sdas/linksrc/lkmain.c: synced further with ASxxxx 5
	* sdas/linksrc/sdld.c: moved tolower
	* src/SDCCmain.c(linkEdit),
	* src/z80/main.c(_gbz80_rgblink): changed .lnk to .lk
	* lkar.c(strndup): removed static

2011-04-18 Borut Razem <borut.razem AT gmail.com>

	* lkar.c: strndup() is a GNU extension,
	  so it is defined here for all platforms

2011-04-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* lkar.c: fixed bug 3288398

2011-04-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* sdas/linksrc/aslink.h: include sdld.h
	* sdas/linksrc/lkarea.c(lkparea, lnkarea, lnkarea2),
	* sdas/linksrc/lkmain.c(parse, setbas),
	* sdas/linksrc/lksym.c(newsym, symeq, hash): synced zflag with ASxxxx 5
	* support/regression/ports/z80/fwk.lib: new, added

2011-04-13 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/string.h,
	  device/lib/_memset.c,
	  device/lib/_strchr.c,
	  device/lib/_strrchr.c:
	  Make string function parameters standard-compliant for the z80 and gbz80 ports.
